colorblind mode is no longer hidden behind collapsibles

--- a/static/datastyle.css
+++ b/static/datastyle.css
@@ -344,9 +344,7 @@ div.RiskInfo {
 	width: 20%;
 	text-align: center;
 	margin-bottom: 10px;
-	left: 3%;
-	top: 26%;
-	position: absolute;
+	position: relative;
 }
 
 div.RiskInfo strong {
@@ -362,9 +360,7 @@ div.rating-breakdown {
 	width: 20%;
 	text-align: center;
 	margin-bottom: 10px;
-	left: 3%;
-	top: 72%;
-	position: absolute;
+	position: relative;
 }
 
 div.rating-breakdown h3 {
@@ -382,9 +378,6 @@ div.rating-legend {
 	width: 20%;
 	text-align: center;
 	margin-bottom: 10px;
-	right: 3%;
-	top: 26%;
-	position: absolute;
 }
 
 div.content {
@@ -399,6 +392,29 @@ div.content {
 div.content p {
 	margin: 15px 0;
 	font-size: 20px;
+}
+
+div.leftHandInfo {
+	display: flex;
+	flex-direction: column;
+	top: 25%;
+	position: absolute;
+}
+
+div#leftHandInfodisplaydata {
+	display: flex;
+	flex-direction: column;
+	top: 25%;
+	position: absolute;
+}
+
+div.rightHandInfo {
+	display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    position: absolute;
+    right: 5%;
+    top: 25%;
 }
 
 /* Only in displayerror.html */
